--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nunjucks": "~0.1.9",
     "cheerio": "~0.12.0",
     "sinon": "~1.7.3",
-    "gelf-stream": "~0.2.2"
+    "gelf-stream": "~0.2.2",
+    "optimist": "~0.6.0"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
