--- a/package.json
+++ b/package.json
@@ -20,16 +20,13 @@
     "cheerio": "~0.12.0",
     "sinon": "~1.7.3",
     "supertest": "~0.6.0",
-    "cucumber": "~0.3.1",
-    "wd": "0.0.34",
-    "colors": "~0.6.1",
-    "fibers": "~1.0.1",
-    "async": "~0.2.9"
+    "zombie": "~2.0.0",
+    "cucumber": "~0.3.1"
   },
   "scripts": {
     "start": "./bin/openbadges-validator-service.js | ./node_modules/.bin/bunyan",
     "start-with-logs": "./bin/openbadges-validator-service.js | ./bin/messina | ./node_modules/.bin/bunyan",
-    "test": "./node_modules/.bin/mocha --reporter spec --check-leaks test/*.test.js"
+    "test": "./node_modules/.bin/mocha --reporter spec --check-leaks test/*.test.js && ./node_modules/.bin/cucumber-js -f pretty"
   },
   "repository": {
     "type": "git",
